--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -51100,7 +51100,7 @@ series:
 
 
         rádi bychom Vás pozvali na **11\. IT konferenci** pořádanou pod taktovkou společnosti Datascript. Tentorát jsme se zaměřili na best practices z pohledu návr'
-      og_title: Softwarová architektura a její dopady na provoz, Tue, Apr 4, 2023, 3:00 PM   | Meetup
+      og_title: Softwarová architektura a její dopady na provoz, Tue, Apr 4, 2023, 9:00 AM   | Meetup
       url: https://www.meetup.com/morning-talks/events/290735923/
       ical:
         summary: Softwarová architektura a její dopady na provoz
@@ -52495,7 +52495,7 @@ series:
 
 
         Kubernetes je jasná volba p'
-      og_title: Síťová vrstva v Kubernetes, Wed, Mar 15, 2023, 2:00 PM   | Meetup
+      og_title: Síťová vrstva v Kubernetes, Wed, Mar 15, 2023, 9:00 AM   | Meetup
       url: https://www.meetup.com/morning-talks/events/291952876/
       ical:
         summary: Síťová vrstva v Kubernetes
@@ -52521,7 +52521,7 @@ series:
 
 
         V posledních letech se'
-      og_title: Návrh systému na pevném základu, Wed, Mar 22, 2023, 2:00 PM   | Meetup
+      og_title: Návrh systému na pevném základu, Wed, Mar 22, 2023, 9:00 AM   | Meetup
       url: https://www.meetup.com/morning-talks/events/291952895/
       ical:
         summary: Návrh systému na pevném základu
@@ -52547,7 +52547,7 @@ series:
 
 
         Vstupom pre'
-      og_title: Neuronové sítě a jak algoritmy vidí a čtou, Wed, Mar 29, 2023, 3:00 PM   | Meetup
+      og_title: Neuronové sítě a jak algoritmy vidí a čtou, Wed, Mar 29, 2023, 9:00 AM   | Meetup
       url: https://www.meetup.com/morning-talks/events/291952900/
       ical:
         summary: Neuronové sítě a jak algoritmy vidí a čtou
@@ -53006,6 +53006,30 @@ series:
         url: https://www.meetup.com/morning-talks/events/290691720/
         dtstart: 2023-02-21 09:00:00+01:00
         dtend: 2023-02-21 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Apache Kafka (nejenom) v aplikacích založených na mikroslužbách
+        description: 'Morning Talks
+
+          Wednesday, March 8 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení.https://www.datascript.cz/morning-talks/apache-kafka-nejenom-v-aplikacich-z...
+
+
+          https://www.meetup.com/morning-talks/events/291952853/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952853@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952853/
+        dtstart: 2023-03-08 09:00:00+01:00
+        dtend: 2023-03-08 10:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
