--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -18995,7 +18995,7 @@ series:
         dtend: 2023-01-18 23:59:00+01:00
   - meetupcom:
       meta_description: We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to two presentations, lightning talks and chit-chat until early morning. You can hav
-      og_title: 'Pyvo Prague #142: GraalPy & HPy i Práce se Stresem, Thu, Mar 16, 2023, 12:00 AM   | Meetup'
+      og_title: 'Pyvo Prague #142: GraalPy & HPy i Práce se Stresem, Wed, Mar 15, 2023, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcfbtb/
       ical:
         summary: 'Pyvo Prague #142: GraalPy & HPy i Práce se Stresem'
@@ -19019,7 +19019,7 @@ series:
         dtend: 2023-03-15 23:59:00+01:00
   - meetupcom:
       meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Thu, Apr 20, 2023, 1:00 AM   | Meetup'
+      og_title: 'Pyvo Prague #, Wed, Apr 19, 2023, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcgbzb/
       ical:
         summary: 'Pyvo Prague #'
@@ -19043,7 +19043,7 @@ series:
         dtend: 2023-04-19 23:59:00+02:00
   - meetupcom:
       meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Thu, May 18, 2023, 1:00 AM   | Meetup'
+      og_title: 'Pyvo Prague #, Wed, May 17, 2023, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfchbwb/
       ical:
         summary: 'Pyvo Prague #'
@@ -19691,7 +19691,7 @@ series:
         dtend: 2023-01-18 23:59:00+01:00
   - meetupcom:
       meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Thu, Jun 22, 2023, 1:00 AM   | Meetup'
+      og_title: 'Pyvo Prague #, Wed, Jun 21, 2023, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcjbcc/
       ical:
         summary: 'Pyvo Prague #'
@@ -19712,6 +19712,30 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcjbcc/
         dtstart: 2023-06-21 19:00:00+02:00
         dtend: 2023-06-21 23:59:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #141 - Asyncio, Tech interview, Lunch break problem'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, February 15 at 7:00 PM
+
+
+          We organize Pyvo in February as well! We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to 3 presentations, ligh...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssyfcdbtb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/
+        dtstart: 2023-02-15 19:00:00+01:00
+        dtend: 2023-02-15 23:59:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
