--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -41622,11 +41622,9 @@ series:
         dtstart: 2023-02-27 17:30:00+01:00
         dtend: 2023-02-27 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.
-
-        Akci organizují Výzkumatky – Volné sdružení výzkumnic s odbornými zk'
-      og_title: 'Research Tuesday: Šablony, které nám dobře slouží, Tue, Mar 14, 2023, 10:00 AM   | Meetup'
-      url: https://www.meetup.com/asociace-ux/events/292066308/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Research Tuesday: Šablony, které nám dobře slouží'
         description: 'Asociace UX
