--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -52491,12 +52491,9 @@ series:
         dtstart: 2023-03-08 09:00:00+01:00
         dtend: 2023-03-08 10:00:00+01:00
   - meetupcom:
-      meta_description: 'Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/sitova-vrstva-v-kubernetes/
-
-
-        Kubernetes je jasná volba p'
-      og_title: Síťová vrstva v Kubernetes, Wed, Mar 15, 2023, 9:00 AM   | Meetup
-      url: https://www.meetup.com/morning-talks/events/291952876/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Síťová vrstva v Kubernetes
         description: 'Morning Talks
@@ -53486,3 +53483,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/291952853/
         dtstart: 2023-03-08 09:00:00+01:00
         dtend: 2023-03-08 10:00:00+01:00
+  - meetupcom:
+      meta_description: 'Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/automatizace-zivotniho-cyklu-it-systemu-pomoci-foremanan'
+      og_title: Automatizace životního cyklu IT systému pomocí Foreman/Ansible, Wed, Apr 12, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/291952907/
+      ical:
+        summary: Automatizace životního cyklu IT systému pomocí Foreman/Ansible
+        description: 'Morning Talks
+
+          Wednesday, April 12 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení:...
+
+
+          https://www.meetup.com/morning-talks/events/291952907/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952907@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952907/
+        dtstart: 2023-04-12 09:00:00+02:00
+        dtend: 2023-04-12 10:00:00+02:00
