--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -21656,3 +21656,116 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/
         dtstart: 2023-02-15 19:00:00+01:00
         dtend: 2023-02-15 23:59:00+01:00
+  - meetupcom:
+      meta_description: 'We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+        **Good to know**
+
+
+        * You don’t have to register for this meetup – the actual a'
+      og_title: 'Pyvo Prague #, Wed, Apr 19, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfcgbzb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, April 19 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added. **Good to know** * You don’t have to register for this m...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfcgbzb/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_nzltctyfcgbzb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfcgbzb/
+        dtstart: 2023-04-19 19:00:00+02:00
+        dtend: 2023-04-19 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+        **Good to know**
+
+
+        * You don’t have to register for this meetup – the actual a'
+      og_title: 'Pyvo Prague #, Wed, May 17, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfchbwb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, May 17 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added. **Good to know** * You don’t have to register for this m...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfchbwb/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_nzltctyfchbwb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfchbwb/
+        dtstart: 2023-05-17 19:00:00+02:00
+        dtend: 2023-05-17 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+        **Good to know**
+
+
+        * You don’t have to register for this meetup – the actual a'
+      og_title: 'Pyvo Prague #, Wed, Jun 21, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfcjbcc/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, June 21 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added. **Good to know** * You don’t have to register for this m...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfcjbcc/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_nzltctyfcjbcc@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/nzltctyfcjbcc/
+        dtstart: 2023-06-21 19:00:00+02:00
+        dtend: 2023-06-21 23:59:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #141 - Asyncio, Tech interview, Lunch break problem'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, February 15 at 7:00 PM
+
+
+          We organize Pyvo in February as well! We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to 3 presentations, ligh...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssyfcdbtb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/
+        dtstart: 2023-02-15 19:00:00+01:00
+        dtend: 2023-02-15 23:59:00+01:00
