--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -74486,3 +74486,60 @@ series:
         url: https://www.meetup.com/prague-devops-meetup/events/283152511/
         dtstart: 2022-02-02 19:00:00+01:00
         dtend: 2022-02-02 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Dear doers,
+
+
+        Please welcome to our next Prague DevOps meetup in person. This event will be hosted in Apify in Lucerna Office.
+
+
+        Stand by for topics and speakers.
+
+
+        See you so'
+      og_title: April 2023 DevOps Meetup, Tue, Apr 11, 2023, 6:00 PM   | Meetup
+      url: https://www.meetup.com/prague-devops-meetup/events/292276705/
+      ical:
+        summary: April 2023 DevOps Meetup
+        description: 'Prague DevOps Meetup
+
+          Tuesday, April 11 at 6:00 PM
+
+
+          Dear doers, Please welcome to our next Prague DevOps meetup in person. This event will be hosted in Apify in Lucerna Office. Stand by for topics and s...
+
+
+          https://www.meetup.com/prague-devops-meetup/events/292276705/'
+        location: Lucerna Cinema (Vodickova 36, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_292276705@meetup.com
+        url: https://www.meetup.com/prague-devops-meetup/events/292276705/
+        dtstart: 2023-04-11 18:00:00+02:00
+        dtend: 2023-04-11 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: November DevOps Meetup
+        description: 'Prague DevOps Meetup
+
+          Tuesday, November 15 at 6:00 PM
+
+
+          Hello doers, we are meeting after long time in person. Build of container images in the “cloud native” CI pipelinesby Martin Odstrcilik from Labyrinth...
+
+
+          https://www.meetup.com/prague-devops-meetup/events/289325884/'
+        location: Forum Karlín (Pernerova 51, Praha 8-Karlín, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289325884@meetup.com
+        url: https://www.meetup.com/prague-devops-meetup/events/289325884/
+        dtstart: 2022-11-15 18:00:00+01:00
+        dtend: 2022-11-15 20:00:00+01:00
