--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -62426,3 +62426,51 @@ series:
         url: https://www.meetup.com/protest_cz/events/289664915/
         dtstart: 2022-11-22 18:00:00+01:00
         dtend: 2022-11-22 19:00:00+01:00
+  - meetupcom:
+      meta_description: Častý problém automatického testování jsou pády testů a dlouhý vývoj. V extrémech to může znamenat zrušení automatizačního projektu a návrat k manuálům. V agilním prostředí
+      og_title: 114. [pro:]TEST! Petr Fifka - Atomické testování v Cypress, Tue, Mar 28, 2023, 6:00 PM   | Meetup
+      url: https://www.meetup.com/protest_cz/events/292264881/
+      ical:
+        summary: 114. [pro:]TEST! Petr Fifka - Atomické testování v Cypress
+        description: '[pro:]TEST!
+
+          Tuesday, March 28 at 6:00 PM
+
+
+          Častý problém automatického testování jsou pády testů a dlouhý vývoj. V extrémech to může znamenat zrušení automatizačního projektu a návrat k manuálů...
+
+
+          https://www.meetup.com/protest_cz/events/292264881/'
+        location: Fortuna Game a.s. (Italská 69, Vinohrady, Praha-Praha 2, Czech Republic 130 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_292264881@meetup.com
+        url: https://www.meetup.com/protest_cz/events/292264881/
+        dtstart: 2023-03-28 18:00:00+02:00
+        dtend: 2023-03-28 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 113. [pro:]TEST! Testerský Open Space - Diskuze bez hranic
+        description: '[pro:]TEST!
+
+          Tuesday, February 21 at 6:00 PM
+
+
+          Trápí vás nějaký problém, nebo přemýšlíte nad nějakým tématem? Tak si o něm přijďte popovídat s naší testerskou komunitou. Open Space Technology (OST)...
+
+
+          https://www.meetup.com/protest_cz/events/291603944/'
+        location: Absa (Milevská 5, Praha 4-Podolí, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291603944@meetup.com
+        url: https://www.meetup.com/protest_cz/events/291603944/
+        dtstart: 2023-02-21 18:00:00+01:00
+        dtend: 2023-02-21 20:00:00+01:00
