--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -74807,3 +74807,27 @@ series:
         url: https://www.meetup.com/prague-devops-meetup/events/289325884/
         dtstart: 2022-11-15 18:00:00+01:00
         dtend: 2022-11-15 20:00:00+01:00
+  - meetupcom:
+      meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: November DevOps Meetup
+        description: 'Prague DevOps Meetup
+
+          Tuesday, November 15 at 6:00 PM
+
+
+          Hello doers, we are meeting after long time in person. Build of container images in the “cloud native” CI pipelinesby Martin Odstrcilik from Labyrinth...
+
+
+          https://www.meetup.com/prague-devops-meetup/events/289325884/'
+        location: Forum Karlín (Pernerova 51, Praha 8-Karlín, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289325884@meetup.com
+        url: https://www.meetup.com/prague-devops-meetup/events/289325884/
+        dtstart: 2022-11-15 18:00:00+01:00
+        dtend: 2022-11-15 20:00:00+01:00
