--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -42557,3 +42557,27 @@ series:
         url: https://www.meetup.com/asociace-ux/events/292066308/
         dtstart: 2023-03-14 10:00:00+01:00
         dtend: 2023-03-14 13:00:00+01:00
+  - meetupcom:
+      meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Research Tuesday: Šablony, které nám dobře slouží'
+        description: 'Asociace UX
+
+          Tuesday, March 14 at 10:00 AM
+
+
+          Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.Akci organizují Výzkumatky – Volné sdružení výz...
+
+
+          https://www.meetup.com/asociace-ux/events/292066308/'
+        location: The Forge – Kovárna Braník (Branická 26/43, , Hlavní město Praha, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_292066308@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/292066308/
+        dtstart: 2023-03-14 10:00:00+01:00
+        dtend: 2023-03-14 13:00:00+01:00
