--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -2,7 +2,7 @@ series:
   title: Prague Artificial Intelligence & Deep Learning
   meetupcom:
     url: https://www.meetup.com/login/
-    meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+    meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
     og_title: Login to Meetup | Meetup
     image: https://secure.meetupstatic.com/photos/event/1/6/c/e/600_485045838.jpeg
   events:
